# pi-square

./: Cargo.toml  README.md  pi-square.service  run.sh
src/: display.rs  main.rs  pi.rs  uptime.rs
