[package]
name = "pi-square"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8"
lcd-pcf8574 = "0.2.0"
num-format = "0.4.4"
lcd = "0.4.1"
